# book_metadata_finder

./: .gitignore  Cargo.toml  README.md
src/: babelio.rs  cached_client.rs  common.rs  google_books.rs  image_tools.rs  jwt_decoder.rs  leboncoin.rs  main.rs  parser.rs  publisher.rs
src/babelio/: parser.rs  request.rs
src/babelio/test/: get_book_minimal.html  get_see_more.html
src/google_books/: parser.rs  request.rs
src/google_books/test/: isbn_response.html  self_link_response.html
src/leboncoin/: parser.rs  request.rs
test/: babelio_response.html
