[package]
name = "book_metadata_finder"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.10.5"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking", "json", "multipart"] }
scraper = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
